--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,9 @@
 
 html {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  overflow-x: hidden;
+  width: 100%;
+  height: 100%;
 }
 body {
   margin: 0;
