--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,7 +136,7 @@ canvas {
   padding-bottom: 2px;
 }
 
-@media(max-width: 377px) {
+@media(max-width: 767px) {
   .img-brand {
     width: 325px;
   }
@@ -165,6 +165,9 @@ canvas {
   #icon-social-media3 {
     top: 76.5%;
     left: 69%;
+  }
+  .foto-pribadi {
+    width: 100px;
   }
 }
 .title h3 {
