--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,6 +211,13 @@ canvas {
   background-color: #ffffff;
   padding: 2px;
 }
+.img-tech3 {
+  width: 90px;
+  margin-top:20px;
+  border-radius: 50%;
+  background-color: #ffffff;
+  padding: 10px 2px;
+}
 .radius {
   border-radius: 20px;
 }
